# general-ledger

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 07b140577523_fix_default_timestamps_for_accounts_and_.py  0b5824501de8_add_date_field_to_ledger_entries.py  2e6306603419_initial_ledger_and_account_tables.py  504e622f7d8b_add_date_field_to_account_entry.py  88b4b8ff4de7_add_idempotency_key_to_ledger_entries.py  a375bbced686_initial_schema.py  b4e03153b58d_fix_created_at_type_for_accounts_table.py
app/: main.py
app/core/: config.py
app/db/: session.py
app/db/models/: __init__.py  account.py  account_model.py  ledger_entry.py  ledger_entry_model.py
app/routes/: accounts.py  entries.py  summary.py
app/schemas/: account_schema.py  ledger_entry_schema.py  summary_schema.py
app/services/: account_service.py  entry_service.py  summary_service.py
app/utils/: currency.py  db_helpers.py  ledger_helpers.py  logger.py
docs/: design.md  setup.md
frontend/: frontend.Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/accounts/: page.tsx
frontend/app/entries/: page.tsx
frontend/components/accounts/: CreateAccountDialog.tsx
frontend/components/entries/: CreateEntryDialog.tsx  DeleteEntryDialog.tsx  EntryForm.tsx  EntryTable.tsx  EntryUpdateForm.tsx  UpdateEntryDialog.tsx  (+1 more)
frontend/general-ledger-ui/: package-lock.json  package.json
scripts/: seed.py
tests/: conftest.py
(+20 files in other folders)
