[project]
name = "general-ledger"
version = "0.1.0"
description = "Minimal accounting ledger backend built with FastAPI, SQLAlchemy, and PostgreSQL."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "coverage>=7.7.1",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.0.1",
    "sentry-sdk[fastapi]>=2.24.1",
    "sqlalchemy>=2.0.39",
]

[dependency-groups]
dev = [
    "greenlet>=3.1.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.2",
]

[tool.ruff]
# In addition to the standard set of exclusions, omit all tests, plus a specific file.
extend-exclude = ["tests", "alembic/env.py"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
